# bastion

./: .gitignore  Cargo.toml  README.md  bastion-setup-openclaw.sh  install.sh
docs/: API.md  SECURITY.md
sandbox/: default.sb  permissive.sb  strict.sb
src/: config.rs  lib.rs  main.rs
src/domain/: mod.rs
src/domain/agent/: entity.rs  mod.rs  repository.rs
src/domain/audit/: entity.rs  mod.rs  repository.rs
src/domain/budget/: entity.rs  mod.rs  repository.rs
src/domain/execution/: mod.rs  port.rs
src/domain/mcp/: port.rs  protocol.rs
src/domain/network/: entity.rs  mod.rs  repository.rs
src/infrastructure/: mod.rs
src/infrastructure/in_memory/: agent_repo.rs  audit_repo.rs  budget_repo.rs  mod.rs  network_repo.rs
src/infrastructure/mcp/: mod.rs  server.rs
src/infrastructure/sandbox/: executor.rs  mod.rs
src/interfaces/http/: auth.rs  handlers.rs  mod.rs  request_id.rs  router.rs  state.rs  validation.rs
tests/: integration_tests.rs  mcp_tests.rs  sandbox_tests.rs
